--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,12 @@
             <version>5.3.17</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.everit.json</groupId>
+            <artifactId>org.everit.json.schema</artifactId>
+            <version>1.3.0</version>
+        </dependency>
+
     </dependencies>
 
     <properties>
